# tennis-tracking

./: .env.docker  CLAUDE.md  DOCKER_README.md  ESTRUTURA_DOMINIO_TENIS.md  IMPLEMENTACAO_WEB.md  Makefile  NOVA_ESTRUTURA.md  NOVA_ESTRUTURA_IMPLEMENTADA.md  docker-compose.yml  index.md  setup.py  start-docker.sh
backend/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  requirements-docker.txt  requirements.txt  simple_server.py
backend/alembic/: env.py
backend/app/: main.py  main_mongodb.py  worker.py
backend/app/api/routes/: __init__.py  analysis.py  analytics.py  auth.py  live_analysis.py  matches.py  players.py  test_auth.py  training.py  upload.py  users.py  videos.py
backend/app/api/websocket/: __init__.py  live_stream.py
backend/app/core/: auth.py  config.py  exceptions.py  mongodb.py
backend/app/models/: __init__.py  analysis.py  event.py  game.py  match.py  player.py  point.py  set.py  training.py  user.py  video.py
backend/app/schemas/: __init__.py  analytics.py  event.py  match.py  player.py  point.py  training.py  video.py
backend/app/services/: __init__.py  analysis_service.py  analytics_service.py  match_service.py  player_service.py  training_service.py  video_service.py
backend/docs/: README.md
backend/scripts/: init-mongo.js  start.sh
backend/tests/: conftest.py
backend/tests/unit/: test_matches.py  test_players.py
config/: court_dimensions.yaml  paths.py  scoring_rules.yaml  settings.py  settings.yaml
docs/: architecture.md
docs/business-rules/: README.md  court-specifications.md  data-flow.md  detection-rules.md  game-events.md  glossary.md  match-structure.md  player-analytics.md  ranking-system.md  scoring-rules.md
frontend/: nginx.conf
src/: __init__.py  app.py  main.py
src/analytics/: __init__.py  performance_analyzer.py
src/analytics/reports/: __init__.py
src/api/: __init__.py
src/broadcast/: __init__.py
src/coaching/: __init__.py
src/computer_vision/: __init__.py
src/computer_vision/detection/: __init__.py  ball_detector.py  player_detector.py
src/computer_vision/models/: __init__.py
src/computer_vision/tracking/: __init__.py  player_tracker.py
src/detection/ball/: tracknet.py
src/detection/court/: court_detector.py
src/events/: __init__.py  event_manager.py
src/events/event_handlers/: __init__.py
src/game_control/: __init__.py  match_manager.py
src/game_control/models/: __init__.py  court.py  match.py  player.py
src/scoring/: __init__.py  score_manager.py
src/scoring/models/: __init__.py  point_history.py  scoreboard.py
src/tactics/: __init__.py
src/tracking/sort/: sort.py
src/training/: __init__.py
src/utils/: device_utils.py
web/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  upload_video_automation.py  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: LanguageSelector.tsx
web/src/hooks/: useMatchData.ts  useWebSocket.ts
web/src/i18n/: index.ts
web/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  (+5 more)
(+22 files in other folders)
